--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
     "styletron-engine-atomic": "^1.4.6",
-    "styletron-react": "^5.2.7"
+    "styletron-react": "^5.2.7",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "dotenv": "^6.2.0",
