--- a/package.json
+++ b/package.json
@@ -12,22 +12,26 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "apollo-boost": "^0.4.4",
     "baseui": "^9.65.3",
     "chart.js": "^2.9.3",
-    "framer-motion": "^12.4.0",
+    "framer-motion": "^12.4.10",
     "gh-pages": "^2.1.1",
     "node-fetch": "^2.6.0",
     "prettier-package-json": "^2.1.3",
-    "react": "^16.10.2",
+    "react": "^18.3.1",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-chartjs-2": "^2.9.0",
-    "react-dom": "^16.10.2",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
+    "react-is": "^19.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-slick": "^0.30.3",
+    "react-spring": "^9.7.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
     "styletron-engine-atomic": "^1.4.6",
